Fix for contact form focus on mobile devices

--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -59,6 +59,22 @@ textarea {
     color: black;
 }
 
+input:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+input:focus:-moz-placeholder {
+    color: transparent;
+}
+
+input:focus::-moz-placeholder {
+    color: transparent;
+}
+
+input:focus:-ms-input-placeholder {
+    color: transparent;
+}
+
 @media screen and (max-width: width(second-width)) {
     .contact__form {
         max-width: 80vw;
